--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "scheduler": "^0.26.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
