--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vitejs/plugin-react": "^4.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^0.33.0"
   }
 }
