--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.1",
     "scheduler": "^0.26.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
