--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@faker-js/faker": "^9.7.0",
     "@fluentui/react": "^8.110.0",
     "@fluentui/react-calendar-compat": "^0.2.5",
@@ -20,17 +24,18 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.501.0",
     "react": "^19.1.0",
-    "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
     "scheduler": "^0.26.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.16",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.4.0",
+    "lodash": "^4.17.21",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-svgr": "^4.3.0",
